--- a/style.css
+++ b/style.css
@@ -33,13 +33,14 @@ footer {
   padding: 40px 20px;
 }
 
-main{
+main {
   flex: 1;
   display: flex;
 }
 
 #gameCanvas {
-  border: 1px solid red;
+  border: 5px solid #b08d15;
+  border-radius: 5px;
   position: absolute;
   top: 50%;
   left: 50%;
