--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ footer {
   padding: 20px 20px;
 }
 
+header {
+  height: 150px; /* You can adjust the height as needed */
+  background-image: url('./assets/logo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 a {
   color: #ffbe00;
   text-decoration: none;
@@ -54,7 +62,8 @@ main {
 }
 
 .logo {
-  width: 190px;
+  width: 20%;
+  height: auto;
 }
 
 .logo:hover {
@@ -66,6 +75,7 @@ main {
   border: 5px solid #ffbe00;
   border-radius: 5px;
   position: absolute;
+  margin-top: 5%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
