--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   --dkclr: #181818;
   --liclr: whitesmoke;
   --accclr: #0d0d35;
+  --red: #e12727;
+  --orange: #ffbe00;
+  --yellow: #eed487;
 }
 
 * {
@@ -33,27 +36,19 @@ footer {
   padding: 20px 20px;
 }
 
-/* header {
-  height: 150px;
-  background-image: url('./assets/logo.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-} */
-
 a {
-  color: #ffbe00;
+  color: var(--orange);
   text-decoration: none;
 }
 
 a:hover {
-  color: #eed487;
+  color: var(--yellow);
   text-decoration: none;
 }
 
 footer {
   font-size: 0.8em;
-  color: #ffbe00;
+  color: var(--orange);
 }
 
 main {
@@ -72,7 +67,7 @@ main {
 }
 
 #gameCanvas {
-  border: 5px solid #ffbe00;
+  border: 5px solid var(--orange);
   border-radius: 5px;
   position: absolute;
   margin-top: 5%;
@@ -81,4 +76,51 @@ main {
   transform: translate(-50%, -50%);
   display: flex;
   z-index: 1;
+}
+
+.gameUI {
+  width: 100%;
+  height: 100%;
+  background-color: var(--accclr);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+.gameUI * {
+  text-align: center;
+  /* margin-top: 5px; */
+}
+
+#gameStart {
+  display: flex;
+}
+
+#gameEnd {
+  display: none;
+}
+.textIntro {
+  margin-top: 15px;
+}
+button {
+  display: inline-block;
+  width: auto;
+  font-size: 1.5em;
+  padding: 10px 15px;
+  margin: 15px 0;
+  text-align: center;
+  font-family: inherit;
+  border-radius: 15px;
+}
+
+button p {
+  margin-top: 0;
+}
+
+button:hover {
+  background-color: var(--red);
+  /* border: 0.5px solid var(--liclr); */
+  color: var(--liclr);
+  cursor: pointer;
 }
