play and restart buttons done

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "puffin-display-soft", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 
   --dkclr: #181818;
   --liclr: whitesmoke;
@@ -36,6 +38,12 @@ footer {
   padding: 20px 20px;
 }
 
+h1 {
+  font-family: "puffin-display-soft", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
 a {
   color: var(--orange);
   text-decoration: none;
@@ -57,9 +65,8 @@ main {
 }
 
 .logo {
-  width: 15%;
+  width: 25%;
   height: auto;
-  margin-bottom: -5%;
 }
 
 .logo:hover {
@@ -71,7 +78,7 @@ main {
   border: 5px solid var(--orange);
   border-radius: 5px;
   position: absolute;
-  margin-top: 5%;
+  /* margin-top: 5%; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -105,6 +112,9 @@ main {
   margin-top: 15px;
 }
 button {
+  font-family: "puffin-display-soft", sans-serif;
+  font-weight: 700;
+  font-style: normal;
   display: inline-block;
   background-color: var(--red);
   border: 2px solid var(--orange);
